--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,12 +14,13 @@ p {
 }
 
 .content {
-	margin-top: 4em;
+	margin-top: 5em;
 }
 
 h1 {
 	color: #ffe7c9;
-	margin-bottom: 0.5em;
+	margin-bottom: 0.75em;
+	
 }
 
 .btn-primary {
@@ -29,8 +30,9 @@ h1 {
 	border: 1px solid #31241b;
 	width: 100%;
 	text-align: center;
-	padding: 2em;
+	padding: 1.5em;
 	color: #fae0bb;
+	font-size: 150%;
 }
 
 .btn-primary:hover {
@@ -47,10 +49,11 @@ h1 {
 
 .or {
 	text-align: center;
+	color: #fae0bb;
 }
 
 .jigsaw {
-padding-left: 7em;
+	padding-left: 7em;
 }
 
 footer {
