Basic page templates and controllers added.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -87,5 +87,11 @@ select {
 	color: #31241b;
 }
 
-
+.submit:hover {
+	background-color: #31241b;
+	background-image: url(../images/button.png);
+	background-repeat:repeat;
+	color: #fae0bb;
+	border: 2px solid #fae0bb;
+}
 
