--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -118,9 +118,10 @@ ul.nav.navbar-nav li a:hover, ul.nav.navbar-nav.navbar-right li a:hover {
 .form-box, textarea, select {
 	margin-bottom: 1.5em;
 	background-color: #fae0bb;
+	color: #31241b; 
 }
 
-select {
+select, input {
 	color: #31241b;
 }
 
@@ -137,5 +138,10 @@ select {
 	background-repeat:repeat;
 	color: #fae0bb;
 	border: 2px solid #fae0bb;
+}
+
+.error {
+	color: red;
+	font-size: 60%;
 }
 
