--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -89,11 +89,20 @@ ul.nav.navbar-nav li a:hover, ul.nav.navbar-nav.navbar-right li a:hover {
 	background-repeat:repeat;
 }
 
+/* Flash message */
+.flash_message {
+    width: 100%;
+    text-align: center;
+    padding: 5px;
+    margin-top: 50px;
+    background-color: #f1e742;
+    font-weight: bold;
+} 
+
 /* Join/Log in */
 
 .center {
 	margin: 0 10% 0 10%;
-	/*background-color: red;*/
 }
 
 .left, .right {
