--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -76,12 +76,26 @@ ul.nav.navbar-nav li a {
 }
 
 ul.nav.navbar-nav.navbar-right li a {
-	color: white;
+	color: #FFFAF3;
+	background-color: #31241B;
+}
+
+.dropdown-menu {
+	background-color: #31241B;
 }
 
 ul.nav.navbar-nav li a:hover, ul.nav.navbar-nav.navbar-right li a:hover {
 	color: #da4d2f;
 }
+
+ul.nav.navbar-nav.navbar-right li {
+	border-right: 5px solid #FFFAF3;
+}
+
+ul.nav.navbar-nav.navbar-right .logged-in li {
+	border-right: 0px solid #31241B;
+}
+
 
 .navbar-right {
 	background-color: #31241b;
