--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -224,7 +224,7 @@ select, input {
 
 /* Stats page */
 table, th, td {
-    border: 1px solid #333333;
+    border: 2px solid #333333;
 }
 
 table {
@@ -234,6 +234,7 @@ table {
 th, td {
 	padding: 10px;
 	text-align: center;
+	font-size: 110%;
 }
 
 .sort {
