Miner canvas background color changed from blue to black.

--- a/public/css/miners.css
+++ b/public/css/miners.css
@@ -22,7 +22,7 @@
 	width: 700px;
 	height: 500px;
 	float: left;
-	background-color: #38979b;
+	background-color: #0A0A0A;
 	background-image: url("../images/mine.png");
 }
 
